[package]
name = "antigravity"
description = "https://xkcd.com/353/"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
version = "0.0.1"
license = "MIT"
edition = "2018"
readme = "README.md"
documentation = "https://xkcd.com/353/"
homepage = "https://xkcd.com/353/"
repository  = "https://xkcd.com/353/"
keywords = ["xkcd", "joke", "python", "flying"]

[dependencies]
