[package]
name = "antigravity"
description = "https://xkcd.com/353/"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
version = "0.0.4"
license = "MIT"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/antigravity/"
homepage = "https://xkcd.com/353/"
repository  = "https://github.com/daniel5151/antigravity"
keywords = ["xkcd", "joke", "python", "flying"]

[dependencies]
